# ofp-renderer

./: .gitattributes  .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  README.md
.devcontainer/: devcontainer.json
.github/workflows/: build.yml
cmake/: FindDirectX9.cmake  FindVulkan.cmake
config/: ofp_renderer.ini.in
docs/: API.md
include/: config.h  d3d8_bridge.h  d3d8_to_vulkan.h  post_processing.h  vulkan_renderer.h
include/vulkan/: vulkan.h  vulkan_core.h
resources/: icon.rc
scripts/: README.md  build.bat  clean.bat  rebuild.bat  setup.bat
shaders/: copy.frag  desaturate.frag  fullscreen_quad.vert  glare.frag  hard_light.frag
src/: dllmain.cpp  post_processing.cpp  vulkan_renderer.cpp
